--- a/app/src/main/res/layout/shopping_item.xml
+++ b/app/src/main/res/layout/shopping_item.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#E6E6E6"
+    android:background="@color/lightergrey2"
     android:orientation="vertical"
     android:padding="16dp">
 
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="9"
         android:text="Name"
-        android:textColor="@android:color/black"
+        android:textColor="@android:color/white"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="Amount"
-        android:textColor="@android:color/black"
+        android:textColor="@android:color/white"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/ivMinus"
